# wildmatch

./: CMakeLists.txt  Makefile  README.md
cmake/: CMakeLists.txt  wildmatch-config.cmake
tests/: CMakeLists.txt  t3070-wildmatch.sh  test-wildmatch.c
wildmatch/: CMakeLists.txt  wildmatch.c
